fix reference error

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8" />
     <title>Duquesne Incline</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="static/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/static/script.js" defer></script>
+    <script src="static/script.js" defer></script>
 </head>
 
 <body>
     <header>
         <div class="logo">
             <h1>Duquesne Incline</h1>
-            <img src="/static/DuqInclineLogo.png" alt="Logo" />
+            <img src="static/DuqInclineLogo.png" alt="Logo" />
         </div>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="/view/things_to_do.html">Things To Do</a>
-            <a href="/view/gift_shop.html">Gift Shop</a>
-            <a href="/view/about.html">About the Incline</a>
+            <a href="index.html">Home</a>
+            <a href="./things_to_do.html">Things To Do</a>
+            <a href="./gift_shop.html">Gift Shop</a>
+            <a href="./about.html">About the Incline</a>
             <a href="#" class="btn">Book a tour!</a>
         </nav>
     </header>
@@ -33,8 +33,8 @@
                 Voted one of the top 10 sites in the world for viewing a cityscape by
                 USA Today!
             </h4>
-            <a class="btn lg">Book a tour! Open 365 days a year!</a>
-            <img src="/static/DuqIncline_Home.png" alt="Incline" />
+            <a href="#" class="btn lg">Book a tour! Open 365 days a year!</a>
+            <img src="static/DuqIncline_Home.png" alt="Incline" />
             <p class="creds">Photo courtesy of "Dllu" on Wikipedia</p>
             <p class="homeintro">
                 Take a step back in time on a century-old cable car and see the best
@@ -52,9 +52,9 @@
         <section id="gallery">
             <h2>View from the Duquesne Incline Observation Deck</h2>
             <div class="imgs">
-                <img src="/static/DuqIncline_view1.png" alt="view1" />
-                <img src="/static/DuqIncline_view2.png" alt="view2" />
-                <img src="/static/DuqIncline_view3.png" alt="view3" />
+                <img src="static/DuqIncline_view1.png" alt="view1" />
+                <img src="static/DuqIncline_view2.png" alt="view2" />
+                <img src="static/DuqIncline_view3.png" alt="view3" />
             </div>
             <div class="creds">
                 <p>Photo courtesy of "Station Square"</p>
@@ -227,16 +227,16 @@
 
     <footer>
         <div>
-            <h1>Duquesne Incline</h1>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="/view/things_to_do.html">Things to Do</a>
-                <a href="/view/gift_shop.html">Gift Shop</a>
-                <a href="/view/about.html">About the Incline</a>
-            </nav>
-            <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
+          <h1>Duquesne Incline</h1>
+          <nav>
+            <a href="../index.html">Home</a>
+            <a href="./things_to_do.html">Things to Do</a>
+            <a href="./gift_shop.html">Gift Shop</a>
+            <a href="./about.html">About the Incline</a>
+          </nav>
+          <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
         </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
