--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
           <h1>Duquesne Incline</h1>
           <nav>
             <a href="../index.html">Home</a>
-            <a href="./things_to_do.html">Things to Do</a>
-            <a href="./gift_shop.html">Gift Shop</a>
-            <a href="./about.html">About the Incline</a>
+            <a href="./view/things_to_do.html">Things to Do</a>
+            <a href="./view/gift_shop.html">Gift Shop</a>
+            <a href="./view/about.html">About the Incline</a>
           </nav>
           <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
         </div>
