--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="./things_to_do.html">Things To Do</a>
-            <a href="./gift_shop.html">Gift Shop</a>
-            <a href="./about.html">About the Incline</a>
+            <a href="./view/things_to_do.html">Things To Do</a>
+            <a href="./view/gift_shop.html">Gift Shop</a>
+            <a href="./view/about.html">About the Incline</a>
             <a href="#" class="btn">Book a tour!</a>
         </nav>
     </header>
