--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Duquesne Incline</title>
-    <link rel="stylesheet" href="static/style.css" />
+    <link rel="stylesheet" href="./static/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="static/script.js" defer></script>
+    <script src="./static/script.js" defer></script>
 </head>
 
 <body>
