Small style fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo">
             <h1>Duquesne Incline</h1>
-            <img src="static/DuqInclineLogo.png" alt="Logo" />
+            <img src="static/DuqInclineLogo.png" alt="Logo">
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -34,7 +34,7 @@
                 USA Today!
             </h4>
             <a href="#" class="btn lg">Book a tour! Open 365 days a year!</a>
-            <img src="static/DuqIncline_Home.png" alt="Incline" />
+            <img src="static/DuqIncline_Home.png" alt="Incline">
             <p class="creds">Photo courtesy of "Dllu" on Wikipedia</p>
             <p class="homeintro">
                 Take a step back in time on a century-old cable car and see the best
@@ -52,9 +52,9 @@
         <section id="gallery">
             <h2>View from the Duquesne Incline Observation Deck</h2>
             <div class="imgs">
-                <img src="static/DuqIncline_view1.png" alt="view1" />
-                <img src="static/DuqIncline_view2.png" alt="view2" />
-                <img src="static/DuqIncline_view3.png" alt="view3" />
+                <img src="static/DuqIncline_view1.png" alt="view1">
+                <img src="static/DuqIncline_view2.png" alt="view2">
+                <img src="static/DuqIncline_view3.png" alt="view3">
             </div>
             <div class="creds">
                 <p>Photo courtesy of "Station Square"</p>
@@ -127,7 +127,6 @@
             <h2>Take a Virtual Tour</h2>
             <div class="video-container">
                 <iframe 
-                    alt="Virtual Tour of the Duquesne Incline"
                     width="1000" 
                     height="600" 
                     src="https://www.youtube.com/embed/ve3KMUIlSGk" 
