Added user feedback

--- a/index.html
+++ b/index.html
@@ -136,30 +136,31 @@
             </div>
         </section>
         <section>
-            <h2>Frequently Ask Questions</h2>
-            <p class="faq">
-                Exact Cash Fare upon arrival. There are no tickets, no advance
-                payment, no reservations and no debit or credit cards.<br><br>The
-                Duquesne Incline is part of the transportation system in Pittsburgh
-                and therefore uses the same _CASH_ fare system as the buses and
-                trolleys. A change machine is available for your convenience. Having
-                the exact fare in hand speeds up the payment process
-                considerably.<br><br>Pennsylvania Seniors 65 and older who
-                present a BLUE or YELLOW PRT card or a Senior ConnectCard ride free,
-                otherwise, the adult rate applies.The Duquesne Incline is required
-                to request a Pennsylvania Senior Citizen Transit ID card as proof of
-                discount eligiblity, no exceptions, in order to be reimbursed by the
-                Commonwealth of PA.<br><br>Sorry, no rest rooms. The Duquesne
-                Incline has been part of Pittsburgh's transportation system since
-                1877 like a trolley or the cable cars of San Francisco.<br><br>
-                Saturday's and Sunday's after noon are our busiest times. Expect to wait in
-                line for about 10 minutes in both directions.<br><br>There are
-                many steps to traverse from the lower station parking lot. The Upper
-                Station located at 1220 Grandview Ave, Pittsburgh, Pa. 15211 is
-                wheelchair accessible. Our observation deck is also wheelchair
-                accessible. The Historic (original) Incline cars can accommodate
-                wheelchairs up to 25 inches in width.
-            </p>
+            <h2>Frequently Asked Questions</h2>
+                <div class="faq-item">
+                    <h3>What payment methods are accepted?</h3>
+                    <p>Exact Cash Fare upon arrival. There are no tickets, no advance payment, no reservations and no debit or credit cards. The Duquesne Incline is part of the transportation system in Pittsburgh and therefore uses the same CASH fare system as the buses and trolleys. A change machine is available for your convenience. Having the exact fare in hand speeds up the payment process considerably.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>What are the senior citizen discount requirements?</h3>
+                    <p>Pennsylvania Seniors 65 and older who present a BLUE or YELLOW PRT card or a Senior ConnectCard ride free, otherwise, the adult rate applies. The Duquesne Incline is required to request a Pennsylvania Senior Citizen Transit ID card as proof of discount eligibility, no exceptions, in order to be reimbursed by the Commonwealth of PA.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Are there restroom facilities available?</h3>
+                    <p>Sorry, no rest rooms. The Duquesne Incline has been part of Pittsburgh's transportation system since 1877 like a trolley or the cable cars of San Francisco.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>What are the peak visiting times?</h3>
+                    <p>Saturday's and Sunday's after noon are our busiest times. Expect to wait in line for about 10 minutes in both directions.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Is the incline wheelchair accessible?</h3>
+                    <p>There are many steps to traverse from the lower station parking lot. The Upper Station located at 1220 Grandview Ave, Pittsburgh, Pa. 15211 is wheelchair accessible. Our observation deck is also wheelchair accessible. The Historic (original) Incline cars can accommodate wheelchairs up to 25 inches in width.</p>
+                </div>
         </section>
 
         <section id="tours">
