--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
                 Voted one of the top 10 sites in the world for viewing a cityscape by
                 USA Today!
             </h4>
-            <a href="#" class="btn lg">Book a tour! Open 365 days a year!</a>
+            <a href="#" class="btn lg">Book a tour! Pricing and Details Below!</a>
+            <p class = "main-contact">
+                Phone: 412-381-1665<br>
+                Fax: 412-381-1943<br>
+                <a href="mailto:duq.incline@duquesneincline.org">duq.incline@duquesneincline.org</a>
+            </p>
             <img src="static/DuqIncline_Home.png" alt="Incline">
             <p class="creds">Photo courtesy of "Dllu" on Wikipedia</p>
             <p class="homeintro">
@@ -126,41 +131,48 @@
         <section id="video-section">
             <h2>Take a Virtual Tour</h2>
             <div class="video-container">
-                <iframe 
-                    width="1000" 
-                    height="600" 
-                    src="https://www.youtube.com/embed/ve3KMUIlSGk" 
-                    allowfullscreen>
+                <iframe width="1000" height="600" src="https://www.youtube.com/embed/ve3KMUIlSGk" allowfullscreen>
                 </iframe>
                 <p class="creds">Video courtesy of "Duquesne Incline"</p>
             </div>
         </section>
         <section>
             <h2>Frequently Asked Questions</h2>
-                <div class="faq-item">
-                    <h3>What payment methods are accepted?</h3>
-                    <p>Exact Cash Fare upon arrival. There are no tickets, no advance payment, no reservations and no debit or credit cards. The Duquesne Incline is part of the transportation system in Pittsburgh and therefore uses the same CASH fare system as the buses and trolleys. A change machine is available for your convenience. Having the exact fare in hand speeds up the payment process considerably.</p>
-                </div>
+            <div class="faq-item">
+                <h3>What payment methods are accepted?</h3>
+                <p>Exact Cash Fare upon arrival. There are no tickets, no advance payment, no reservations and no debit
+                    or credit cards. The Duquesne Incline is part of the transportation system in Pittsburgh and
+                    therefore uses the same CASH fare system as the buses and trolleys. A change machine is available
+                    for your convenience. Having the exact fare in hand speeds up the payment process considerably.</p>
+            </div>
 
-                <div class="faq-item">
-                    <h3>What are the senior citizen discount requirements?</h3>
-                    <p>Pennsylvania Seniors 65 and older who present a BLUE or YELLOW PRT card or a Senior ConnectCard ride free, otherwise, the adult rate applies. The Duquesne Incline is required to request a Pennsylvania Senior Citizen Transit ID card as proof of discount eligibility, no exceptions, in order to be reimbursed by the Commonwealth of PA.</p>
-                </div>
+            <div class="faq-item">
+                <h3>What are the senior citizen discount requirements?</h3>
+                <p>Pennsylvania Seniors 65 and older who present a BLUE or YELLOW PRT card or a Senior ConnectCard ride
+                    free, otherwise, the adult rate applies. The Duquesne Incline is required to request a Pennsylvania
+                    Senior Citizen Transit ID card as proof of discount eligibility, no exceptions, in order to be
+                    reimbursed by the Commonwealth of PA.</p>
+            </div>
 
-                <div class="faq-item">
-                    <h3>Are there restroom facilities available?</h3>
-                    <p>Sorry, no rest rooms. The Duquesne Incline has been part of Pittsburgh's transportation system since 1877 like a trolley or the cable cars of San Francisco.</p>
-                </div>
+            <div class="faq-item">
+                <h3>Are there restroom facilities available?</h3>
+                <p>Sorry, no rest rooms. The Duquesne Incline has been part of Pittsburgh's transportation system since
+                    1877 like a trolley or the cable cars of San Francisco.</p>
+            </div>
 
-                <div class="faq-item">
-                    <h3>What are the peak visiting times?</h3>
-                    <p>Saturday's and Sunday's after noon are our busiest times. Expect to wait in line for about 10 minutes in both directions.</p>
-                </div>
+            <div class="faq-item">
+                <h3>What are the peak visiting times?</h3>
+                <p>Saturday's and Sunday's after noon are our busiest times. Expect to wait in line for about 10 minutes
+                    in both directions.</p>
+            </div>
 
-                <div class="faq-item">
-                    <h3>Is the incline wheelchair accessible?</h3>
-                    <p>There are many steps to traverse from the lower station parking lot. The Upper Station located at 1220 Grandview Ave, Pittsburgh, Pa. 15211 is wheelchair accessible. Our observation deck is also wheelchair accessible. The Historic (original) Incline cars can accommodate wheelchairs up to 25 inches in width.</p>
-                </div>
+            <div class="faq-item">
+                <h3>Is the incline wheelchair accessible?</h3>
+                <p>There are many steps to traverse from the lower station parking lot. The Upper Station located at
+                    1220 Grandview Ave, Pittsburgh, Pa. 15211 is wheelchair accessible. Our observation deck is also
+                    wheelchair accessible. The Historic (original) Incline cars can accommodate wheelchairs up to 25
+                    inches in width.</p>
+            </div>
         </section>
 
         <section id="tours">
@@ -198,7 +210,8 @@
     <section id="map">
         <h2>Google Maps</h2>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2323.6286068431127!2d-80.01844906053137!3d40.43984642324624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f6af24753323%3A0x391d7b79fc54985b!2sDuquesne%20Incline!5e1!3m2!1sen!2sus!4v1742867092708!5m2!1sen!2sus">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2323.6286068431127!2d-80.01844906053137!3d40.43984642324624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f6af24753323%3A0x391d7b79fc54985b!2sDuquesne%20Incline!5e1!3m2!1sen!2sus!4v1742867092708!5m2!1sen!2sus">
             </iframe>
         </div>
         <table class="contact-table">
@@ -227,16 +240,16 @@
 
     <footer>
         <div>
-          <h1>Duquesne Incline</h1>
-          <nav>
-            <a href="index.html">Home</a>
-            <a href="./view/things_to_do.html">Things to Do</a>
-            <a href="./view/gift_shop.html">Gift Shop</a>
-            <a href="./view/about.html">About the Incline</a>
-          </nav>
-          <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
+            <h1>Duquesne Incline</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="./view/things_to_do.html">Things to Do</a>
+                <a href="./view/gift_shop.html">Gift Shop</a>
+                <a href="./view/about.html">About the Incline</a>
+            </nav>
+            <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
