--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Header: Contains logo and main navigation -->
     <header>
         <div class="logo">
             <h1>Duquesne Incline</h1>
@@ -27,6 +28,7 @@
     </header>
 
     <main>
+        <!--  Main introduction and contact info -->
         <section class="mainpart">
             <h2>Duquesne Incline Official Website</h2>
             <h4>
@@ -34,7 +36,7 @@
                 USA Today!
             </h4>
             <a href="#" class="btn lg">Book a tour! Pricing and Details Below!</a>
-            <p class = "main-contact">
+            <p class="main-contact">
                 Phone: 412-381-1665<br>
                 Fax: 412-381-1943<br>
                 <a href="mailto:duq.incline@duquesneincline.org">duq.incline@duquesneincline.org</a>
@@ -54,6 +56,8 @@
                 Pittsburgh souvenirs, maps and photos can be found at the gift shop.
             </p>
         </section>
+
+        <!-- Gallery section: Observation deck views -->
         <section id="gallery">
             <h2>View from the Duquesne Incline Observation Deck</h2>
             <div class="imgs">
@@ -67,6 +71,8 @@
                 <p>Photo courtesy of "Jiuguang Wang" on Flickr</p>
             </div>
         </section>
+
+        <!-- Operating hours and pricing section -->
         <section>
             <h2>Open 365 Days a Year</h2>
             <br>
@@ -128,6 +134,8 @@
                     Pittsburgh, Pa. 15211.</li>
             </ul>
         </section>
+
+        <!-- Virtual tour section -->
         <section id="video-section">
             <h2>Take a Virtual Tour</h2>
             <div class="video-container">
@@ -136,6 +144,8 @@
                 <p class="creds">Video courtesy of "Duquesne Incline"</p>
             </div>
         </section>
+
+        <!-- FAQ section -->
         <section>
             <h2>Frequently Asked Questions</h2>
             <div class="faq-item">
@@ -175,6 +185,7 @@
             </div>
         </section>
 
+        <!-- Tour booking section -->
         <section id="tours">
             <h2>Book Tours</h2>
             <div class="cards">
@@ -207,6 +218,7 @@
         </section>
     </main>
 
+    <!-- Map and contact information section -->
     <section id="map">
         <h2>Google Maps</h2>
         <div class="map-container">
@@ -238,6 +250,7 @@
         </table>
     </section>
 
+    <!-- Footer: Contains site navigation and copyright information -->
     <footer>
         <div>
             <h1>Duquesne Incline</h1>
